# ma_utils

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  Makefile.am  README  README.md  configure.ac  ma_utils.spec
arkimet/sh/: Makefile.am  ak_getgrib.ksh  ak_seriet.ksh  crea_progetto_grid.ksh  crea_progetto_point.ksh  plot_local_orog.gs  seriet2adms.sh  seriet2calmet_inp.sh  split_progetto_point.sh  urbane2adms.sh
arkimet/src/: Makefile  Makefile.am  gacsv2seriet.f90  gacsv_scan.f90  indice2coor.f90  mvl_create.f90  pm_profile_zi.f90  ptn2pts_csv.f90  scores_seriet.f90  scores_seriet_wind.f90  sel_punti.f90  sel_punti_grid.f90  tfill_seriet.f90  write_fisiog_csv.f90  write_libsim_anag.f90
calmet/sh/: Makefile.am  arkimet_3dd.bash  crea_progetto_calmet.ksh  crea_progetto_run.ksh  run_calmet.ksh  run_calmet.sh
calmet/src/: Makefile  Makefile.am  append_calmet_dat.f90  asc2calmet_dat.f90  calc_staz_dist.f90  calmet2grib.f90  calmet_dat2asc.f90  crea_calmet_inp.f90  crea_date_calmet.f90  crea_prq_surf.f90  crea_surf_dat.f90  crea_surf_req.f90  crea_wt_dat.f90  dummy_grib_calmet.f90  extrap_wind.f90  geo_dat2grib.f90  grib23ddat.f90  grib2mm5.f90  grib2up_dat.f90  proc_seriet_prf.f90  proc_seriet_surf.f90  proc_st1a.f90  rw_dat_calmet.f90  rw_xout_calmet.f90  sel_staz_calmet.f90  test_inp_calmet.f90  xout2grib.f90
chimere/sh/: Makefile.am  chimere_env.sh  compile_chimere_chain.sh  crea_input_bc.ksh  crea_input_bc.sh  crea_input_emi.ksh  crea_input_emi.sh  crea_input_meteo.sh  crea_progetto_chimere.sh  estra_grib_cosmo.sh
chimere/src/: Makefile  Makefile.am  altipres_sim.f90  calendar.F90  chimere2grib.f90  chimere_cdfluse2asc.f90  chimere_params.F90  chimeredep2grib.f90  chimerencdf2grib.F90  chimerencdf2grib.f90  chimerencdfmet2grib.f90  chmbc2cdf.F90  column_content.f90  cosmo_option.F90  crea_coord_chimere.f90  exdom_grib.f90  filtra_spec_out.f90  grb_chimere2netcdf.f90  grib2chimere.f90  grib2chimerencdf.f90  grib2diagmetncdf.F90  io.F90  lm2ncf.F90  merge_unf_chimere.f90  mix_ratio.f90  prepcosmomed.F90  pres_ecmwf.f90  riscrivi_meteonc.F90  scale_unf_chimere.f90  show_unf_chimere.f90  split_output.f90  subs.F90  sum_pm_species.f90  sum_unf_chimere.f90  tinterp_sim.f90
chimere/src/ver2007/: Makefile.am  README.TXT
chimere/src/ver2007/diag/: deepconvtiedke.F90  diagbio.ITA5KM.F90  diagbio.LMSMR4.F90  diagbio_common.ITA5KM.F90  diagbio_common.LAMA3.F90  diagbio_megan.F90  diagbio_science.ITA5KM.F90  diagbio_science.LMSMR4.F90  diagmet.F90  diagmet.ITA5KM.F90  diagmet.LAMA5.F90  diagmet.LAMAZ.F90  diagmet.LMSMR4.F90  diagmet_common.ITA5KM.F90  diagmet_common.LMSMR4.F90  diagmet_science.ITA5KM.F90  diagmet_science.LAMA3.F90  diagmet_science.LMSMR4.F90
chimere/src/ver2007/modules/: chimere_consts.F90  chimere_params.ITA5KM.F90  chimere_params.LAMA3.F90  chimere_params.LAMA5.F90  chimere_params.LAMAZ.F90  chimere_params.LMSMR4.F90
chimere/src/ver2007/tools/: io.F90  subs.F90
chimere/src/ver2011/: Makefile.am
chimere/src/ver2011/diag/: diagmet_science.F90
chimere/src/ver2011/tools/: calendar.F90  layave.F90  subs.F90
data/: COS2I_orog.ctl  COS2I_orog.grb  COS2I_orog_20180825.ctl  COS2I_orog_20180825.grb  COS2I_orog_20180825.idx  COS5MITA_orog.ctl  COS5MITA_orog.grb  COS5MITA_orog_20170405.ctl  COS5MITA_orog_20170405.grb  COS5MITR_layers.grb  COS5MITR_layersSup.grb  COS5MITR_orog.ctl  COS5MITR_orog.grb  COS5MITR_orog_20180514.ctl  COS5MITR_orog_20180514.grb  COS5MITR_orog_20180514.idx  COS5MMEDL_orog.ctl  COS5MMEDL_orog.grb  COS5MMEDL_orog.idx  COS5MMEDL_orog_20170405.ctl  COS5MMEDL_orog_20170405.ctl.org  COS5MMEDL_orog_20170405.grb  I2ALL2KM_orog_20241009.ctl  I2ALL2KM_orog_20241009.grib2  I2ITA2KM_orog_20241009.ctl  I2ITA2KM_orog_20241009.grib2  I2ITA5KM_orog_20241009.ctl  I2ITA5KM_orog_20241009.grib2  I2NITA2KM_orog_20241009.ctl  I2NITA2KM_orog_20241009.grib2  LAMA5_layers.grb  LAMA5_layersSup.grb  LAMA5_layers_20180514.grb  LAMA5_orog.ctl  LAMA5_orog.grb  LAMA5_orog.idx  LAMA5_orog_20180514.ctl  LAMA5_orog_20180514.grb  LAMAZ_layers.grb  LAMAZ_layersSup.grb  (+68 more)
fedora/SPECS/: ma_utils.spec
fisiog/src/: Makefile  Makefile.am  calc_tpi.f90  geo_rotated.f90  geo_utm.f90  proc_fisiog.f90
modules/: Makefile.am  date_handler.f90  grib2_utilities.f90  grid_handler.f90  seriet_utilities.f90
osservazioni/dat/: db_anagrafica.dat.20080107  db_anagrafica.dat.20080219
osservazioni/sh/: Makefile.am  crea_anag_arkioss.ksh  crea_anag_arkioss.sh  crea_anag_gts.ksh  crea_anag_gts.sh  draw_orog.gs  (+17 more)
osservazioni/src/: Makefile  Makefile.am  bufr_csv2orari.f90  bufr_csv2temp.f90  bufr_csv_int2orari.f90  daily2orari.f90  filtra_anag_dat.f90  maskout_orari.f90  orari2grads.f90  orari2seriet.f90  orari_add_var.f90  orari_daily_stat.f90  ordina_dati_tmp.f90  proc_multi_orari.f90  proc_sodar_moniter.f90  scrive_dati_sql.f90  scrive_stzqa_sql.f90  seriet_forc2ana.f90  stat_orari.f90  temp_csv2asc.f90  trasp_temp.f90
post_lm/src/: Makefile  Makefile.am  calc_anh01.f90  calc_inv_max.f90  calc_ipgt.f90  calc_ipgt_inv_multi.f90  calc_ps_cosmo.f90  calc_swdown.f90  calc_ustar_mo.f90  correct_lamaz.f90  decumula_lm.f90  grib_ttd2rh.f90  lm_levels2layers.f90  post_wind_lm.f90  post_zi_diagmet.f90  qsoil_ecmwf2lama.f90  split_qrs.f90  stat_qrs_temp.f90
util/grads/src/: Makefile  Makefile.am  adjust_ctl.f90  convert_shape.f90  coord2marks.f90  grib_utm_scale.f90
util/grib/src/: Makefile  Makefile.am  afa2grib.f90  cong2.f90  crea_templ_grib2_utm.f90  diff_grib.f90  diff_gribex.f90  diff_header_gribex.f90  grib2_forc2ana.f90  grib2afa.f90  grib2latlon.f90  grib_ana2forc.f90  grib_ave.f90  grib_calc_median.f90  grib_daily_stat.f90  grib_dist_freq.f90  grib_f2s.f90  grib_forc2ana.f90  grib_local_std.f90  grib_rms_diff.f90  grib_runmean.f90  grib_s2f.f90  grib_set_scanning.f90  grib_skip_first.f90  grib_smooth.f90  grib_stat.f90  grib_step_explicit.f90  grib_uniq.f90  grib_uv2ffdd.f90  intercala_grib.f90  interp_grib.f90  llgrib.f90  llgribex.f90  ma_grib1_grib2.f90  ma_grib2_grib1.f90  ma_grib2_grib1_gribex.f90  mask_grib.f90  maskout_grib.f90  math_grib.f90  moltiplica_grib.f90  (+9 more)
(+69 files in other folders)
