AM_FCFLAGS = -I/usr/lib64/gfortran/modules -I$(top_builddir)/modules
AM_LDFLAGS = $(top_builddir)/modules/libmautils.la

bin_PROGRAMS = gacsv2seriet.exe gacsv_scan.exe indice2coor.exe mvl_create.exe pm_profile_zi.exe ptn2pts_csv.exe scores_seriet.exe scores_seriet_wind.exe sel_punti.exe sel_punti_grid.exe write_fisiog_csv.exe write_libsim_anag.exe

gacsv2seriet_exe_SOURCES = gacsv2seriet.f90
gacsv_scan_exe_SOURCES = gacsv_scan.f90
indice2coor_exe_SOURCES = indice2coor.f90
mvl_create_exe_SOURCES = mvl_create.f90
pm_profile_zi_exe_SOURCES = pm_profile_zi.f90
ptn2pts_csv_exe_SOURCES = ptn2pts_csv.f90
scores_seriet_exe_SOURCES = scores_seriet.f90
scores_seriet_wind_exe_SOURCES = scores_seriet_wind.f90
sel_punti_exe_SOURCES = sel_punti.f90
sel_punti_grid_exe_SOURCES = sel_punti_grid.f90
write_fisiog_csv_exe_SOURCES = write_fisiog_csv.f90
write_libsim_anag_exe_SOURCES = write_libsim_anag.f90
