AM_FCFLAGS = -I/usr/lib64/gfortran/modules -I$(top_builddir)/modules
AM_LDFLAGS = $(top_builddir)/modules/libmautils.la

bin_PROGRAMS = filtra_anag_dat.exe maskout_orari.exe orari_daily_stat.exe orari2grads.exe proc_multi_orari.exe proc_sodar_moniter.exe stat_orari.exe trasp_temp.exe

filtra_anag_dat_exe_SOURCES = filtra_anag_dat.f90
maskout_orari_exe_SOURCES = maskout_orari.f90
orari_daily_stat_exe_SOURCES = orari_daily_stat.f90
orari2grads_exe_SOURCES = orari2grads.f90
proc_multi_orari_exe_SOURCES = proc_multi_orari.f90
proc_sodar_moniter_exe_SOURCES = proc_sodar_moniter.f90
stat_orari_exe_SOURCES = stat_orari.f90
trasp_temp_exe_SOURCES = trasp_temp.f90
