AM_FCFLAGS = -I/usr/lib64/gfortran/modules -I$(top_builddir)/modules
LDADD = $(top_builddir)/modules/libmautils.la

pkglibexec_PROGRAMS = bufr_csv2orari.exe bufr_csv_int2orari.exe bufr_csv2temp.exe daily2orari.exe filtra_anag_dat.exe maskout_orari.exe orari_daily_stat.exe orari2grads.exe orari2seriet.exe orari_add_var.exe ordina_dati_tmp.exe proc_multi_orari.exe proc_sodar_moniter.exe scrive_dati_sql.exe scrive_stzqa_sql.exe seriet_forc2ana.exe stat_orari.exe temp_csv2asc.exe trasp_temp.exe

bufr_csv2orari_exe_SOURCES = bufr_csv2orari.f90
bufr_csv_int2orari_exe_SOURCES = bufr_csv_int2orari.f90
bufr_csv2temp_exe_SOURCES = bufr_csv2temp.f90
daily2orari_exe_SOURCES = daily2orari.f90
filtra_anag_dat_exe_SOURCES = filtra_anag_dat.f90
maskout_orari_exe_SOURCES = maskout_orari.f90
orari_daily_stat_exe_SOURCES = orari_daily_stat.f90
orari2grads_exe_SOURCES = orari2grads.f90
orari2seriet_exe_SOURCES = orari2seriet.f90
orari_add_var_exe_SOURCES = orari_add_var.f90
ordina_dati_tmp_exe_SOURCES = ordina_dati_tmp.f90
proc_multi_orari_exe_SOURCES = proc_multi_orari.f90
proc_sodar_moniter_exe_SOURCES = proc_sodar_moniter.f90
scrive_dati_sql_exe_SOURCES = scrive_dati_sql.f90
scrive_stzqa_sql_exe_SOURCES = scrive_stzqa_sql.f90
seriet_forc2ana_exe_SOURCES = seriet_forc2ana.f90
stat_orari_exe_SOURCES = stat_orari.f90
temp_csv2asc_exe_SOURCES = temp_csv2asc.f90
trasp_temp_exe_SOURCES = trasp_temp.f90
