AM_FCFLAGS = -I/usr/lib64/gfortran/modules -I$(top_builddir)/modules
AM_LDFLAGS = $(top_builddir)/modules/libmautils.la

bin_PROGRAMS = adjust_ctl.exe convert_shape.exe grib_utm_scale.exe coord2marks.exe

adjust_ctl_exe_SOURCES = adjust_ctl.f90
convert_shape_exe_SOURCES = convert_shape.f90
grib_utm_scale_exe_SOURCES = grib_utm_scale.f90
coord2marks_exe_SOURCES = coord2marks.f90
